fix: hide scrollbar on desktop version

--- a/estilos.css
+++ b/estilos.css
@@ -222,7 +222,12 @@ footer > div > label:nth-child(3){
         grid-template-rows: auto;
         justify-items: stretch;
         align-items: start;
-        overflow-y:scroll;
+        overflow:scroll;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;
+    }
+    .productos_box::-webkit-scrollbar{
+        display: none;
     }
     .card > img {
     }
